--- a/divy/index.html
+++ b/divy/index.html
@@ -3,11 +3,10 @@
       <head>
          <meta charset="UFT-8">
          <title>DIVy</title>
-         
+         <link rel="stylesheet" href="style.css">
       </head>
          <body>
-            <div>
-               To jest div
-            </div>
+            <div class="zolty szeroki"></div>
             <div></div>
+            <footer></footer>
          </body>
