--- a/kosmos/index.html
+++ b/kosmos/index.html
@@ -4,6 +4,7 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500&amp;subset=latin-ext" rel="stylesheet">
    <link rel="stylesheet" href="style.css">
    <title>Document</title>
 </head>
@@ -11,5 +12,17 @@
    <header class="header-main">
       <a href="index.html"><img class="img-logo" src="img/logo.png"alt="Klub Rakietowy Logo"></a>
    </header>
+
+   <section class="offers">
+      <h2 class="hidden">Oferty</h2>
+      <article class="offers-single">
+         <header>
+            <img src="img/astronauta.png" alt = "astronauta">
+            <h3>Zostań astronautą</h3>
+         </header>
+            <p>Z nami polecisz do najdalszych galaktyk. Swoją własną rakietą...</p>
+            <a href="#">Czytaj więcej...</a>
+      </article>
+   </section>
 </body>
 </html>
