--- a/kosmos/index.html
+++ b/kosmos/index.html
@@ -9,20 +9,55 @@
    <title>Document</title>
 </head>
 <body>
+   <h1 class="hidden">Klub Rakietowy - wycieczki w kosmos</h1>
+   <nav class="navbar">
+      <h2 class="hidden">Menu główne</h2>
+      <a href='#'><img src="img/rakieta2.png" alt="Rakieta logo"></a>
+         <ul>
+            <li><a href='#'></a>Oferty</li>
+            <li><a href="#"></a>Kontakt</li>
+            <li><a href="#"></a>Galeria</li>
+         </ul>
+   </nav>
+
    <header class="header-main">
       <a href="index.html"><img class="img-logo" src="img/logo.png"alt="Klub Rakietowy Logo"></a>
    </header>
 
-   <section class="offers">
-      <h2 class="hidden">Oferty</h2>
-      <article class="offers-single">
-         <header>
-            <img src="img/astronauta.png" alt = "astronauta">
-            <h3>Zostań astronautą</h3>
-         </header>
-            <p>Z nami polecisz do najdalszych galaktyk. Swoją własną rakietą...</p>
-            <a href="#">Czytaj więcej...</a>
-      </article>
-   </section>
+   <main>
+
+      <section class="offers">
+
+         <h2 class="hidden">Oferty</h2>
+
+         <article class="offers-single">
+            <header>
+               <img src="img/astronauta.png" alt = "astronauta">
+               <h3>Zostań astronautą</h3>
+            </header>
+               <p>Z nami polecisz do najdalszych galaktyk. Swoją własną rakietą...</p>
+               <a href="#">Czytaj więcej...</a>
+         </article>
+
+         <article class="offers-single">
+            <header>
+               <img src="img/rakieta.png" alt = "rakieta">
+               <h3>Poleć rakietą</h3>
+            </header>
+               <p>Z nami polecisz do najdalszych galaktyk. Swoją własną rakietą...</p>
+               <a href="#">Czytaj więcej...</a>
+         </article>
+
+         <article class="offers-single">
+            <header>
+               <img src="img/ufo.png" alt = "UFO">
+               <h3>Spotkaj UFO</h3>
+            </header>
+               <p>Z nami polecisz do najdalszych galaktyk. Swoją własną rakietą...</p>
+               <a href="#">Czytaj więcej...</a>
+         </article>
+
+      </section>
+   </main>
 </body>
 </html>
