--- a/kosmos/index.html
+++ b/kosmos/index.html
@@ -12,11 +12,11 @@
    <h1 class="hidden">Klub Rakietowy - wycieczki w kosmos</h1>
    <nav class="navbar">
       <h2 class="hidden">Menu główne</h2>
-      <a href='#'><img src="img/rakieta2.png" alt="Rakieta logo"></a>
+      <a href="#"><img src="img/rakieta2.png" alt="Rakieta"></a>
          <ul>
-            <li><a href='#'></a>Oferty</li>
-            <li><a href="#"></a>Kontakt</li>
-            <li><a href="#"></a>Galeria</li>
+            <li><a href="#">Oferty</a></li>
+            <li><a href="#">Kontakt</a></li>
+            <li><a href="#">Galeria</a></li>
          </ul>
    </nav>
 
@@ -58,6 +58,27 @@
          </article>
 
       </section>
+
+      <section class="wanted">
+         <h2 class="hidden">Wanted</h2>
+         <header>
+            <img src="img/uwaga-napis.png" alt = "Wanted">
+         </header>
+
+         <article class="kosmici">
+            <a href="#"><img src="img/poszukiwany1.png" alt="kosmita 1"></a>
+         </article>
+
+         <article class="kosmici">
+            <a href="#"><img src="img/poszukiwany2.png" alt="kosmita 2"></a>
+         </article>
+            
+         <article class="kosmici">
+            <a href="#"><img src="img/poszukiwany3.png" alt="kosmita 3"></a>
+         </article>
+
+      </section>
+
    </main>
 </body>
 </html>
