--- a/float/index.html
+++ b/float/index.html
@@ -6,35 +6,41 @@
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <title>Document</title>
    <style>
-      /* .zielony{
-         float: left;
-         height: 150px;
-         width: 150px;
-         background-color: green;
-      } */
+      
 
       .wrapper{
          width: 1000px;
          background-color: aqua;
       }
 
-      .header{
+      header{
          height: 100px;
          background-color: blue;
       }
 
-      .nav{
+      nav{
          height: 60px;
          background-color: blueviolet
       }
 
-      .main{
+      main{
+         float: left;
          width: 700px;
+         height: 400px;
          background-color: greenyellow;
       }
 
-      .aside{
-         
+      aside{
+         float: right;
+         width: 300px;
+         height: 400px;
+         background-color: brown;
+      }
+
+      footer{
+         clear: both;
+         height: 80px;
+         background-color: orange;
       }
    
    
